--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -12,8 +12,7 @@ body {
   color: white;
   font-size: 32px;
   font-weight: 900;
-  padding: 16px;
-  flex: 0;
+  padding: 0px 16px;
   display: flex;
   align-items: center;
 }
@@ -22,17 +21,16 @@ body {
   height: 72px;
   background: #eee;
   color: darkmagenta;
-  flex: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 16px;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  flex-shrink: 0;
   padding: 16px;
 }
 
@@ -41,19 +39,18 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
   width: 300px;
-  height: 350px;
-  padding: 32px;
+  padding: 16px;
 }
 
-.content {
+.body {
   flex: 1;
   display: flex;
 }
 
-.cards {
+.container {
   display: flex;
   flex-wrap: wrap;
-  padding: 32px;
+  padding: 48px;
   gap: 32px;
 }
 
@@ -67,4 +64,8 @@ ul {
   list-style: none;
   padding: 0px;
   margin: 0px;
+}
+
+li {
+  margin-bottom: 16px;
 }
